# whisper.Lancaster

./: .gitignore
WhisperDLLTest/: LancasterWhisperAPI.h  WhisperDLLTest.vcxproj  WhisperDLLTest.vcxproj.filters  main.cpp
WhisperDLLTest/lib/: LancasterWhisper.lib
WhisperDLLTest/x64/Debug/: vc143.idb
build_folder/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  whisper-config.cmake  whisper.cpp.sln  whisper.pc
build_folder/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  common.vcxproj  common.vcxproj.filters
build_folder/examples/Release/: common.lib
build_folder/examples/bench/: INSTALL.vcxproj  INSTALL.vcxproj.filters  bench.vcxproj  bench.vcxproj.filters  cmake_install.cmake
build_folder/examples/main/: INSTALL.vcxproj  INSTALL.vcxproj.filters  Lancaster_Whisper_API.cpp  Lancaster_Whisper_API.h  cmake_install.cmake  main.cpp  main.h  main.vcxproj  main.vcxproj.filters
build_folder/examples/quantize/: INSTALL.vcxproj  (+4 more)
build_folder/ggml/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  ggml.sln
build_folder/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  prelink debug.txt  prelink release.txt  whisper.vcxproj  whisper.vcxproj.filters
examples/: CMakeLists.txt
examples/tbs-whisper-api/: CMakeLists.txt  filecopy.bat  tbs-whisper-api.cpp  tbs-whisper-api.h
ggml/src/: CMakeLists.txt
src/: CMakeLists.txt
(+119 files in other folders)
